force-app/main/default/objects/LLC_BI__Lien__c/fields/LLC_BI__Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Amount__c</fullName>
    <description>This is a user updated field. The lien amount against a piece of collateral.</description>
    <inlineHelpText>The lien amount against a piece of collateral.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>