force-app/main/default/objects/LLC_BI__Lien__c/fields/LLC_BI__Expire_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Expire_Date__c</fullName>
    <description>This is a user updated field. The date the lien has been paid out.</description>
    <inlineHelpText>The date the lien has been paid out.</inlineHelpText>
    <label>Expire Date</label>
    <type>Date</type>
</CustomField>