force-app/main/default/objects/LLC_BI__Lien__c/fields/LLC_BI__Institution__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Institution__c</fullName>
    <description>This is a user updated field. The institution that has the lien against the piece of collateral.</description>
    <inlineHelpText>The institution that has the lien against the piece of collateral.</inlineHelpText>
    <label>Institution</label>
    <type>TextArea</type>
</CustomField>