force-app/main/default/objects/LLC_BI__Lien__c/fields/LLC_BI__Is_Internal__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Internal__c</fullName>
    <description>This field is auto-populated and indicates if the lien was created in the system by the booking of a loan.</description>
    <formula>LLC_BI__Loan__c != NULL</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is_Internal</label>
    <type>Checkbox</type>
</CustomField>