force-app/main/default/objects/LLC_BI__Lien__c/fields/LLC_BI__Loan__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Loan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Automatically calculated. The loan that this lien is tied to, if the lien is within this financial institution.</description>
    <inlineHelpText>The loan that this lien is tied to, if the lien is within this financial institution.</inlineHelpText>
    <label>Loan</label>
    <referenceTo>LLC_BI__Loan__c</referenceTo>
    <relationshipLabel>Liens</relationshipLabel>
    <relationshipName>Liens</relationshipName>
    <type>Lookup</type>
</CustomField>