force-app/main/default/objects/LLC_BI__Lien__c/fields/LLC_BI__Position__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Position__c</fullName>
    <description>This is a user updated field. The order in which liens will be repaid when the property is transferred to a new owner.</description>
    <inlineHelpText>The order in which liens will be repaid when the property is transferred to a new owner.</inlineHelpText>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1st</fullName>
            </value>
            <value>
                <fullName>2nd</fullName>
            </value>
            <value>
                <fullName>3rd</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>