force-app/main/default/objects/LLC_BI__Lien__c/fields/pollen__c.field-meta.xml
<CustomField>
    <fullName>pollen__c</fullName>
    <label>polloan</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>